Bug 104252 - [CI][IGT]igt@perf@gen8-unprivileged-single-ctx-counters test assertion failure function gen8_test_single_ctx_render_target_writes_a_counter
Summary: [CI][IGT]igt@perf@gen8-unprivileged-single-ctx-counters test assertion failur...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Lionel Landwerlin
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
: 105543 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-12-13 23:07 UTC by Octavio
Modified: 2018-06-19 14:26 UTC (History)
3 users (show)

See Also:
i915 platform: BXT, KBL, SKL
i915 features: firmware/guc, Perf/OA


Attachments
dmesg log (104.87 KB, text/plain)
2017-12-13 23:07 UTC, Octavio
no flags Details

Description Octavio 2017-12-13 23:07:17 UTC
Created attachment 136160 [details]
dmesg log

This test fail on BXT QA

(perf:2268) CRITICAL: Test assertion failure function gen8_test_single_ctx_render_target_writes_a_counter, file perf.c:4000:
(perf:2268) CRITICAL: Failed assertion: accumulator.deltas[2 + 26] == width * height
(perf:2268) CRITICAL: error: 0 != 480000
Subtest gen8-unprivileged-single-ctx-counters failed.
Comment 1 Octavio 2017-12-13 23:07:52 UTC
======================================
        Graphic stack
======================================

======================================
             Software
======================================
kernel version              : 4.15.0-rc2-drm-intel-qa-ww49-commit-bdf9b36+
hostname                    : gfx-desktop
architecture                : x86_64
os version                  : Ubuntu 16.10
os codename                 : yakkety
kernel driver               : i915
bios revision               : 5.6
bios release date           : 06/19/2017
ksc                         : 18.0
hardware acceleration       : disabled
swap partition              : enabled on (/dev/sda3)

======================================
        Graphic drivers
======================================
grep: /opt/X11R7/var/log/Xorg.0.log: No such file or directory
libdrm                      : 2.4.88
cairo                       : 1.15.9
intel-gpu-tools (tag)       : intel-gpu-tools-1.20-200-g39ac6b8
intel-gpu-tools (commit)    : 39ac6b8

======================================
             Hardware
======================================
motherboard model          : NUC6CAYS
motherboard id             : NUC6CAYB
form factor                : Desktop
manufacturer               : Intelcorporation
cpu family                 : Celeron
cpu family id              : 6
cpu information            : Intel(R) Celeron(R) CPU J3455 @ 1.50GHz
gpu card                   : Intel Corporation Device 5a85 (rev 0b) (prog-if 00 [VGA controller])
memory ram                 : 15.52 GB
max memory ram             : 32 GB
cpu thread                 : 4
cpu core                   : 4
cpu model                  : 92
cpu stepping               : 9
socket                     : Other
signature                  : Type 0, Family 6, Model 92, Stepping 9
hard drive                 : 111GiB (120GB)
current cd clock frequency : 288000 kHz
maximum cd clock frequency : 624000 kHz
displays connected         : DP-2

======================================
             Firmware
======================================
dmc fw loaded             : yes
dmc version               : 1.7
guc fw loaded             : fetch SUCCESS, load SUCCESS
guc version wanted        : wanted 9.29, found 9.29
guc version found         : wanted 9.29, found 9.29

======================================
             kernel parameters
======================================
quiet splash drm.debug=0xe intel_iommu=igfx_off i915.enable_guc=3 drm.debug=0xe resume=/dev/sda2
Comment 2 Octavio 2017-12-14 16:03:01 UTC
Full test output

IGT-Version: 1.20-g39ac6b8 (x86_64) (Linux: 4.15.0-rc2-drm-intel-qa-ww49-commit-bdf9b36+ x86_64)
Using GuC submission
Test requirement not met in function __real_main1452, file gem_exec_fence.c:1469:
Test requirement: gem_has_ring(i915, e->exec_id | e->flags)
Test requirement not met in function __real_main1452, file gem_exec_fence.c:1469:
Test requirement: gem_has_ring(i915, e->exec_id | e->flags)
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [gem_execbuf+0x44]
  #2 [__real_main1452+0x2791]
  #3 [main+0x23]
  #4 [__libc_start_main+0xf1]
  #5 [_start+0x29]
  #6 [<unknown>+0x29]
Subtest parallel-blt: FAIL (0.011s)

(gem_exec_fence:1795) ioctl-wrappers-CRITICAL: Test assertion failure function gem_execbuf, file ioctl_wrappers.c:604:
(gem_exec_fence:1795) ioctl-wrappers-CRITICAL: Failed assertion: __gem_execbuf(fd, execbuf) == 0
(gem_exec_fence:1795) ioctl-wrappers-CRITICAL: error: -22 != 0
Subtest parallel-blt failed.
**** DEBUG ****
(gem_exec_fence:1795) DEBUG: Test requirement passed: has_submit_fence(i915)
(gem_exec_fence:1795) drmtest-DEBUG: Test requirement passed: !(fd<0)
(gem_exec_fence:1795) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(gem_exec_fence:1795) ioctl-wrappers-DEBUG: Test requirement passed: err == 0
(gem_exec_fence:1795) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_exec_fence:1795) igt-dummyload-DEBUG: Test requirement passed: nengine
(gem_exec_fence:1795) ioctl-wrappers-CRITICAL: Test assertion failure function gem_execbuf, file ioctl_wrappers.c:604:
(gem_exec_fence:1795) ioctl-wrappers-CRITICAL: Failed assertion: __gem_execbuf(fd, execbuf) == 0
(gem_exec_fence:1795) ioctl-wrappers-CRITICAL: error: -22 != 0
(gem_exec_fence:1795) igt-core-INFO: Stack trace:
(gem_exec_fence:1795) igt-core-INFO:   #0 [__igt_fail_assert+0x101]
(gem_exec_fence:1795) igt-core-INFO:   #1 [gem_execbuf+0x44]
(gem_exec_fence:1795) igt-core-INFO:   #2 [__real_main1452+0x2791]
(gem_exec_fence:1795) igt-core-INFO:   #3 [main+0x23]
(gem_exec_fence:1795) igt-core-INFO:   #4 [__libc_start_main+0xf1]
(gem_exec_fence:1795) igt-core-INFO:   #5 [_start+0x29]
(gem_exec_fence:1795) igt-core-INFO:   #6 [<unknown>+0x29]
****  END  ****
Comment 3 Octavio 2017-12-21 22:01:00 UTC
This test fails on BXT using the below configuration 

IGT-Version: 1.20-gbeb26d8 (x86_64) (Linux: 4.15.0-rc4-drm-intel-qa-ww51-commit-b480e79+ x86_64)
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [gen8_test_single_ctx_render_target_writes_a_counter+0xcb0]
  #2 [<unknown>+0xcb0]
Subtest gen8-unprivileged-single-ctx-counters: FAIL (0.049s)
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [gen8_test_single_ctx_render_target_writes_a_counter+0xe35]
  #2 [__real_main4393+0x1523]
  #3 [main+0x23]
  #4 [__libc_start_main+0xf1]
  #5 [_start+0x29]
  #6 [<unknown>+0x29]
Subtest gen8-unprivileged-single-ctx-counters: FAIL (0.052s)
	
(perf:3201) CRITICAL: Test assertion failure function gen8_test_single_ctx_render_target_writes_a_counter, file perf.c:3875:
(perf:3201) CRITICAL: Failed assertion: accumulator.deltas[2 + 26] == width * height
(perf:3201) CRITICAL: error: 0 != 480000
Subtest gen8-unprivileged-single-ctx-counters failed.
**** DEBUG ****
(perf:3200) DEBUG: Test requirement passed: intel_gen(devid) >= 8
(perf:3201) DEBUG: submitting warm up render_copy
(perf:3201) DEBUG: opening i915-perf stream
(perf:3201) DEBUG: MI_RPC(start) CTX ID: 2092453
(perf:3201) DEBUG: total: A0 = 1471216, A21 = 360000, A26 = 1440000
(perf:3201) DEBUG: oa_timestamp32 0 = 4224238163
(perf:3201) DEBUG: oa_timestamp32 1 = 4224306852
(perf:3201) DEBUG: ctx_id 0 = 2092453
(perf:3201) DEBUG: ctx_id 1 = 2092404
(perf:3201) DEBUG: ts_timestamp64 0 = 17109140038
(perf:3201) DEBUG: ts_timestamp64 1 = 17109208722
(perf:3201) DEBUG: oa32 delta = 68689, = 3577552ns
(perf:3201) DEBUG: ts64 delta = 68684, = 3577291ns
(perf:3201) DEBUG: read 2376 bytes
(perf:3201) DEBUG: report 0x7f3ba57d7018:
(perf:3201) DEBUG:     ctx_id=4294967295/ffffffff reason=ctx-load oa_timestamp32=4224237453
(perf:3201) DEBUG:  -> Skipping: not our context
(perf:3201) DEBUG: report 0x7f3ba57d7120:
(perf:3201) DEBUG:     deltas: A0=4879 A21=0, A26=0
(perf:3201) DEBUG:     ctx_id=4294967295/ffffffff reason=ctx-load oa_timestamp32=4224238513
(perf:3201) DEBUG:  -> Skipping: not our context
(perf:3201) DEBUG: report 0x7f3ba57d7228:
(perf:3201) DEBUG:     deltas: A0=0 A21=0, A26=0
(perf:3201) DEBUG:     ctx_id=4294967295/ffffffff reason=ctx-load oa_timestamp32=4224252913
(perf:3201) DEBUG:  -> Skipping: not our context
(perf:3201) DEBUG: report 0x7f3ba57d7330:
(perf:3201) DEBUG:     deltas: A0=489147 A21=120000, A26=480000
(perf:3201) DEBUG:     ctx_id=4294967295/ffffffff reason=ctx-load oa_timestamp32=4224270920
(perf:3201) DEBUG:  -> Skipping: not our context
(perf:3201) DEBUG: report 0x7f3ba57d7438:
(perf:3201) DEBUG:     deltas: A0=0 A21=0, A26=0
(perf:3201) DEBUG:     ctx_id=4294967295/ffffffff reason=ctx-load oa_timestamp32=4224270978
(perf:3201) DEBUG:  -> Skipping: not our context
(perf:3201) DEBUG: report 0x7f3ba57d7540:
(perf:3201) DEBUG:     deltas: A0=0 A21=0, A26=0
(perf:3201) DEBUG:     ctx_id=4294967295/ffffffff reason=ctx-load oa_timestamp32=4224271879
(perf:3201) DEBUG:  -> Skipping: not our context
(perf:3201) DEBUG: report 0x7f3ba57d7648:
(perf:3201) DEBUG:     deltas: A0=384284 A21=102960, A26=377292
(perf:3201) DEBUG:     ctx_id=4294967295/ffffffff reason=ctx-load oa_timestamp32=4224285988
(perf:3201) DEBUG:  -> Skipping: not our context
(perf:3201) DEBUG: report 0x7f3ba57d7750:
(perf:3201) DEBUG:     deltas: A0=120050 A21=27856, A26=111599
(perf:3201) DEBUG:     ctx_id=4294967295/ffffffff reason=ctx-load oa_timestamp32=4224290217
(perf:3201) DEBUG:  -> Skipping: not our context
(perf:3201) DEBUG: report 0x7f3ba57d7858:
(perf:3201) DEBUG:     comes after last MI_RPC (4224306852)
(perf:3201) DEBUG:     deltas: A0=475419 A21=109184, A26=471109
(perf:3201) DEBUG:     ctx_id=2092404/1fed74 reason=ctx-load oa_timestamp32=4224306852
(perf:3201) DEBUG:  -> Skipping: not our context
(perf:3201) DEBUG: Breaking on end of report
(perf:3201) DEBUG: TIMESTAMP: 1st = 4224238163, 2nd = 4224306852, delta = 68689
(perf:3201) DEBUG: CLOCK: 1st = 676713542, 2nd = 678676675, delta = 1963133
(perf:3201) DEBUG: CTX ID: 1st = 2092453, 2nd = 2092404
(perf:3201) DEBUG: SLICE CLK: 1st = 8249mhz, 2nd = 7983mhz, delta = -266
(perf:3201) DEBUG: UNSLICE CLK: 1st = 3983mhz, 2nd = 3983mhz, delta = 0
(perf:3201) DEBUG: REASONS: 1st = "timer", 2nd = "timer"
(perf:3201) DEBUG: A0: 1st = 2563, 2nd = 1473779, delta = 1471216
(perf:3201) DEBUG: A1: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A2: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A3: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A4: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A5: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A6: 1st = 0, 2nd = 90000, delta = 90000
(perf:3201) DEBUG: A7: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A8: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A9: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A10: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A11: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A12: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A13: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A14: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A15: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A16: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A17: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A18: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A19: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A20: 1st = 0, 2nd = 719888, delta = 719888
(perf:3201) DEBUG: A21: 1st = 0, 2nd = 360000, delta = 360000
(perf:3201) DEBUG: A22: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A23: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A24: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A25: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A26: 1st = 0, 2nd = 1440000, delta = 1440000
(perf:3201) DEBUG: A27: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A28: 1st = 0, 2nd = 360000, delta = 360000
(perf:3201) DEBUG: A29: 1st = 0, 2nd = 90526, delta = 90526
(perf:3201) DEBUG: A30: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A31: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A32: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A33: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A34: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: A35: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: B0: 1st = 0, 2nd = 0, delta = 0
(perf:3201) DEBUG: B1: 1st = 127557, 2nd = 2090690, delta = 1963133
(perf:3201) DEBUG: B2: 1st = 127557, 2nd = 2090690, delta = 1963133
(perf:3201) DEBUG: B3: 1st = 63778, 2nd = 1045345, delta = 981567
(perf:3201) DEBUG: B4: 1st = 42519, 2nd = 696897, delta = 654378
(perf:3201) DEBUG: B5: 1st = 42519, 2nd = 696897, delta = 654378
(perf:3201) DEBUG: B6: 1st = 21259, 2nd = 348448, delta = 327189
(perf:3201) DEBUG: B7: 1st = 85039, 2nd = 1393794, delta = 1308755
(perf:3201) DEBUG: C0: 1st = 127557, 2nd = 2090690, delta = 1963133
(perf:3201) DEBUG: C1: 1st = 1993, 2nd = 32667, delta = 30674
(perf:3201) DEBUG: C2: 1st = 11959, 2nd = 196010, delta = 184051
(perf:3201) DEBUG: C3: 1st = 19, 2nd = 304, delta = 285
(perf:3201) DEBUG: C4: 1st = 102503, 2nd = 1492593, delta = 1390090
(perf:3201) DEBUG: C5: 1st = 2195, 2nd = 124765, delta = 122570
(perf:3201) DEBUG: C6: 1st = 1993, 2nd = 32667, delta = 30674
(perf:3201) DEBUG: C7: 1st = 127543, 2nd = 2090676, delta = 1963133
(perf:3201) DEBUG: n samples written = 0/0 (800x600)
(perf:3201) DEBUG: filtered:
(perf:3201) DEBUG: 	time delta = 0
(perf:3201) DEBUG: 	clock cycle delta = 0
(perf:3201) DEBUG: 	A0 = 0
(perf:3201) DEBUG: 	A1 = 0
(perf:3201) DEBUG: 	A2 = 0
(perf:3201) DEBUG: 	A3 = 0
(perf:3201) DEBUG: 	A4 = 0
(perf:3201) DEBUG: 	A5 = 0
(perf:3201) DEBUG: 	A6 = 0
(perf:3201) DEBUG: 	A7 = 0
(perf:3201) DEBUG: 	A8 = 0
(perf:3201) DEBUG: 	A9 = 0
(perf:3201) DEBUG: 	A10 = 0
(perf:3201) DEBUG: 	A11 = 0
(perf:3201) DEBUG: 	A12 = 0
(perf:3201) DEBUG: 	A13 = 0
(perf:3201) DEBUG: 	A14 = 0
(perf:3201) DEBUG: 	A15 = 0
(perf:3201) DEBUG: 	A16 = 0
(perf:3201) DEBUG: 	A17 = 0
(perf:3201) DEBUG: 	A18 = 0
(perf:3201) DEBUG: 	A19 = 0
(perf:3201) DEBUG: 	A20 = 0
(perf:3201) DEBUG: 	A21 = 0
(perf:3201) DEBUG: 	A22 = 0
(perf:3201) DEBUG: 	A23 = 0
(perf:3201) DEBUG: 	A24 = 0
(perf:3201) DEBUG: 	A25 = 0
(perf:3201) DEBUG: 	A26 = 0
(perf:3201) DEBUG: 	A27 = 0
(perf:3201) DEBUG: 	A28 = 0
(perf:3201) DEBUG: 	A29 = 0
(perf:3201) DEBUG: 	A30 = 0
(perf:3201) DEBUG: 	A31 = 0
(perf:3201) DEBUG: 	A32 = 0
(perf:3201) DEBUG: 	A33 = 0
(perf:3201) DEBUG: 	A34 = 0
(perf:3201) DEBUG: 	A35 = 0
(perf:3201) DEBUG: 	B0 = 0
(perf:3201) DEBUG: 	B1 = 0
(perf:3201) DEBUG: 	B2 = 0
(perf:3201) DEBUG: 	B3 = 0
(perf:3201) DEBUG: 	C0 = 0
(perf:3201) DEBUG: 	C1 = 0
(perf:3201) DEBUG: 	C2 = 0
(perf:3201) DEBUG: 	C3 = 0
(perf:3201) DEBUG: 	C4 = 0
(perf:3201) DEBUG: 	C5 = 0
(perf:3201) DEBUG: 	C6 = 0
(perf:3201) DEBUG: 	C7 = 0
(perf:3201) CRITICAL: Test assertion failure function gen8_test_single_ctx_render_target_writes_a_counter, file perf.c:3875:
(perf:3201) CRITICAL: Failed assertion: accumulator.deltas[2 + 26] == width * height
(perf:3201) CRITICAL: error: 0 != 480000
(perf:3201) igt-core-INFO: Stack trace:
(perf:3201) igt-core-INFO:   #0 [__igt_fail_assert+0x101]
(perf:3201) igt-core-INFO:   #1 [gen8_test_single_ctx_render_target_writes_a_counter+0xcb0]
(perf:3201) igt-core-INFO:   #2 [<unknown>+0xcb0]
****  END  ****
(perf:3200) CRITICAL: Test assertion failure function gen8_test_single_ctx_render_target_writes_a_counter, file perf.c:3894:
(perf:3200) CRITICAL: Failed assertion: WEXITSTATUS(child_ret) == EAGAIN || WEXITSTATUS(child_ret) == 0
Subtest gen8-unprivileged-single-ctx-counters failed.
**** DEBUG ****
(perf:3200) DEBUG: Test requirement passed: intel_gen(devid) >= 8
(perf:3200) CRITICAL: Test assertion failure function gen8_test_single_ctx_render_target_writes_a_counter, file perf.c:3894:
(perf:3200) CRITICAL: Failed assertion: WEXITSTATUS(child_ret) == EAGAIN || WEXITSTATUS(child_ret) == 0
(perf:3200) igt-core-INFO: Stack trace:
(perf:3200) igt-core-INFO:   #0 [__igt_fail_assert+0x101]
(perf:3200) igt-core-INFO:   #1 [gen8_test_single_ctx_render_target_writes_a_counter+0xe35]
(perf:3200) igt-core-INFO:   #2 [__real_main4393+0x1523]
(perf:3200) igt-core-INFO:   #3 [main+0x23]
(perf:3200) igt-core-INFO:   #4 [__libc_start_main+0xf1]
(perf:3200) igt-core-INFO:   #5 [_start+0x29]
(perf:3200) igt-core-INFO:   #6 [<unknown>+0x29]
****  END  ****
Comment 4 Elizabeth 2018-03-05 22:33:15 UTC
This is still an issue on BXT:

igt@perf@gen8-unprivileged-single-ctx-counters

Out	
IGT-Version: 1.21-gbddfb8d (x86_64) (Linux: 4.16.0-rc3-drm-intel-qa-ww9-commit-b2e10fd+ x86_64)
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [gen8_test_single_ctx_render_target_writes_a_counter+0xcb0]
  #2 [<unknown>+0xcb0]
Subtest gen8-unprivileged-single-ctx-counters: FAIL (0.066s)
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [gen8_test_single_ctx_render_target_writes_a_counter+0xe35]
  #2 [__real_main4086+0x1523]
  #3 [main+0x23]
  #4 [__libc_start_main+0xf1]
  #5 [_start+0x29]
  #6 [<unknown>+0x29]
Subtest gen8-unprivileged-single-ctx-counters: FAIL (0.071s)
Comment 5 Jani Saarinen 2018-03-29 07:10:00 UTC
First of all. Sorry about spam.
This is mass update for our bugs. 

Sorry if you feel this annoying but with this trying to understand if bug still valid or not.
If bug investigation still in progress, please ignore this and I apologize!

If you think this is not anymore valid, please comment to the bug that can be closed.
If you haven't tested with our latest pre-upstream tree(drm-tip), can you do that also to see if issue is valid there still and if you cannot see issue there, please comment to the bug.
Comment 6 Elizabeth 2018-04-06 22:28:10 UTC
This is still valid for SKL, KBL and BXT:

Results for igt@perf@gen8-unprivileged-single-ctx-counters
Result: fail

Out	
IGT-Version: 1.21-ge3a0ed9 (x86_64) (Linux: 4.16.0-rc7-drm-intel-qa-ww14-commit-c46052c+ x86_64)
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [gen8_test_single_ctx_render_target_writes_a_counter+0xcb0]
  #2 [<unknown>+0xcb0]
Subtest gen8-unprivileged-single-ctx-counters: FAIL (0.019s)
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [gen8_test_single_ctx_render_target_writes_a_counter+0xe35]
  #2 [__real_main4086+0x1523]
  #3 [main+0x23]
  #4 [__libc_start_main+0xf1]
  #5 [_start+0x29]
  #6 [<unknown>+0x29]
Subtest gen8-unprivileged-single-ctx-counters: FAIL (0.021s)
Err	
(perf:31446) CRITICAL: Test assertion failure function gen8_test_single_ctx_render_target_writes_a_counter, file perf.c:3568:
(perf:31446) CRITICAL: Failed assertion: accumulator.deltas[2 + 26] == width * height
(perf:31446) CRITICAL: error: 0 != 480000
Subtest gen8-unprivileged-single-ctx-counters failed.
Comment 7 Lionel Landwerlin 2018-04-07 00:51:47 UTC
Thanks, I'll try to look into it soon.
Comment 8 Lionel Landwerlin 2018-04-07 12:32:45 UTC
*** Bug 105543 has been marked as a duplicate of this bug. ***
Comment 9 Martin Peres 2018-04-12 13:49:29 UTC
Adding the [CI] tag for consistency, and easy queries of CI bugs.
Comment 12 Lionel Landwerlin 2018-04-24 16:25:49 UTC
(In reply to Martin Peres from comment #11)
> (In reply to Jani Saarinen from comment #10)
> > These are passing in CI, see:
> > https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_25/fi-skl-6600u/runtimes-all.
> > log
> > https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_25/fi-kbl-7560u/runtimes-all.
> > log
> > https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_25/fi-bxt-j4205/runtimes-all.
> > log
> > 
> > Resolving.
> 
> It is still a problem on skl-guc:
> https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_26/fi-skl-guc/igt@perf@gen8-
> unprivileged-single-ctx-counters.html

Thanks Martin!

I didn't know was failing on GuC...
I see that the GuC seems to be scheduling stuff with an invalid context id :(
Not really looking forward to debug a blackbox...
Comment 13 Martin Peres 2018-05-28 16:59:07 UTC
Also on KBL GUC: 
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_43/fi-kbl-guc/igt@perf@gen8-unprivileged-single-ctx-counters.html

(perf:1372) CRITICAL: Test assertion failure function gen8_test_single_ctx_render_target_writes_a_counter, file ../tests/perf.c:3568:
(perf:1372) CRITICAL: Failed assertion: accumulator.deltas[2 + 26] == width * height
(perf:1372) CRITICAL: error: 0 != 480000
Subtest gen8-unprivileged-single-ctx-counters failed.
Comment 14 Lionel Landwerlin 2018-06-04 17:25:35 UTC
Should be fixed in https://cgit.freedesktop.org/drm/drm-tip/commit/?id=61d5676b5561d61e3fdd9e88fc2b549b9b4df08f :

commit 61d5676b5561d61e3fdd9e88fc2b549b9b4df08f
Author: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
Date:   Sat Jun 2 12:29:46 2018 +0100

    drm/i915/perf: fix ctx_id read with GuC & ICL
Comment 15 Jani Saarinen 2018-06-19 14:26:00 UTC
Closing, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.